# peachai

./: .gitignore  CMakeLists.txt  README.md  read_training_data.cpp  record_training_data.cpp
sample/: screen.peach
train_model/: main.cpp  net.cpp  neuron.cpp  training_data.cpp
train_model/h/: net.hpp  neuron.hpp  training_data.hpp
